presence scrollbar fix

--- a/src/app/pages/presence/presence.component.scss
+++ b/src/app/pages/presence/presence.component.scss
@@ -11,7 +11,7 @@
 }
 
 .presence-page {
-  height: 100%;
+  height: 90%;
 }
 
 .graph-div {
@@ -19,7 +19,7 @@
 }
 
 .presence-div {
-  height: 80%;
+  height: 30%;
 }
 
 .user {
